--- a/src/components/Chart/Chart.module.css
+++ b/src/components/Chart/Chart.module.css
@@ -5,3 +5,13 @@
     justify-content: center;
     width: 85%;
 }
+
+
+
+
+@media (max-width:770px) {
+    .container{
+        width: 100% ;
+        
+    }
+}
